--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div data-role="MobileMenu" class="header-mobile-menu">
             <div class="header-top">
               <a href="index.html" class="header-navlink3 Register">
-                Soft UI Design System
+                CanCode
               </a>
               <div data-role="CloseMobileMenu" class="header-close-menu">
                 <svg viewBox="0 0 1024 1024" class="header-icon2">
