--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
   <head>
     <title>About | CanCode</title>
     <link rel="icon" href="public/logo.png">
-    <meta property="og:title" content="Profile - Soft UI Pro" />
+    <meta property="og:title" content="About | CanCode" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
