--- a/profile.html
+++ b/profile.html
@@ -67,7 +67,7 @@
                 <div class="header-full-container2">
                   <div class="primary-pink-button-container">
                     <button class="primary-pink-button-button button Register">
-                      <span>buy now</span>
+                      <span>Register</span>
                     </button>
                   </div>
                 </div>
