--- a/profile.html
+++ b/profile.html
@@ -66,7 +66,7 @@
               <div class="header-full-container1">
                 <div class="header-full-container2">
                   <div class="primary-pink-button-container">
-                    <button class="primary-pink-button-button button Register">
+                    <button class="primary-pink-button-button button Register" onclick='window.location.href = "https://forms.gle/VmMvovTeQiFJ6Wmw8";'>
                       <span>Register</span>
                     </button>
                   </div>
